Fix/1220 sonar code smells and risks (#1272)
* Add workflow to keep track of progress

* Remove empty constructors

* Replace casts with instanceof operator

* Replace wrappers with primitive types

* Make `public static` variables also `final`

* Fix wrong logger

* Remove unnecessary parentheses

* Replace deprecated constructor

* Remove unnecessary assertion

* Add private constructors for static utility classes

* replace `Collectors.toList()` with `toList()`

* Replace string concatenation with log formatting

* Replace comments with JavaDoc

* Remove unused logger

* Remove unused imports

* Remove empty SCSS files

* Invoke methods in logging statements only conditionally

* Add missing @Override annotation

* Rename generic according to single letter convention

* Invoke methods in logging statements only conditionally

* Remove unused imports

* Replace `RuntimeException` with more specific exceptions

* Suppress SonarQube rule where it is appropriate

* Move log message to constant

* Deconstruct array before sorting, so the original value does not get overwritten

* Rename logger to no overwrite field of parent class

* Fix failing test

* Add try-with statement to automatically close resource

* Access static field from interface where it is defined

* Replace `stream().filter(...).findAny()` with `stream().anyMatch()` so that there is no unused return value

* Rewrite method to reduce cyclomatic complexity

* Make ErrorDto serializable to also make the OkResponseStatusException correctly serializable

* Only allow safe HTTP method calls for static resources

* Remove unused loading of SVG icons directly from resource URL

* fix after rebase

* run frontend formatter

* apply backend formatter

* clean up simple code smells

* resolve complex code smells

* fix tests

* apply formatter

* update package-lock

* remove all sonar bugs

* readd jest to dev dependencies

* fix action test and add db migration

* fix h2 schema and test data

* run formatter
